# cutileGPT

./: .gitignore  .gitmodules  PROJECT_STRUCTURE.md  README.md  VISUALIZATION_GUIDE.md  demo_tile_gpt.py  pyproject.toml
cutile_gpt/: README.md  __init__.py  compare.py  model.py  model_tile.py
cutile_gpt/kernels/: __init__.py  attention.py  attention_improved.py  attention_step1.py  embedding.py  fused_mlp.py  gelu.py  layernorm.py  linear.py  linear_optimized.py  linear_sweep.py  linear_v2.py
cutile_gpt/models/: gpt.py
cutile_gpt/utils/: __init__.py  hf_loader.py
docs/: ARCHITECTURE_VISION.md  CHANGELOG_TILE_PHILOSOPHY.md  CUTILE_PYTHON_PHILOSOPHY_ANALYSIS.md  OPTIMIZATION_SUMMARY.md  PROFILING_SUMMARY.md  PROJECT_STRUCTURE.md  TILE_PHILOSOPHY_DEMO.md  VISUALIZATION_SUMMARY.md
docs/assets/: benchmark_data.json  comparison_table.md  comprehensive_comparison.csv  comprehensive_comparison.json
mlir_research/: CMakeLists.txt  CUDA_TILE_MLIR_INTEGRATION_ANALYSIS.md  CUDA_TILE_PHILOSOPHY_ANALYSIS.md  GETTING_STARTED_MLIR.md  LLVM_MLIR_BUILD_SOLUTION.md  NEXT_STEPS.md  README.md  TILE_IR_EXPERIMENT_RESULTS.md  TILE_IR_IMPROVEMENTS.md  TILE_IR_SUMMARY_KR.md  setup_cuda_tile.sh  setup_cuda_tile_auto.sh
mlir_research/cutile_gpt_mlir/: __init__.py  kernels.py
mlir_research/cutile_gpt_mlir/kernels/: CMakeLists.txt  layernorm.mlir  test_simple.mlir
profiling_results/: comparison_dashboard.html  comparison_data.json  performance_dashboard.html  profiling_data.json
scripts/: benchmark_tile_optimization.py  compare_mingpt.py  comprehensive_comparison.py  create_benefits_svg.py  create_visualizations.py  create_visualizations_matplotlib.py  demo_hf_inference.py  profile_performance.py  run_ncu_profile.sh  run_nsys_profile.sh  visualize_comparison.py  visualize_performance.py
tests/: test_gpt2_real.py  test_text_generation.py  test_tile_sizes.py
